crates/carta/tests/snapshots/golden_e2e__ipynb__latex__attachment.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
\protect\phantomsection\label{figure}
An embedded attachment:

\pandocbounded{\includegraphics[keepaspectratio,alt={a diagram}]{figure-diagram.png}}
