crates/carta/tests/snapshots/golden_e2e__ipynb__latex__cell-metadata-scalars.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
\protect\phantomsection\label{tagged}
\begin{verbatim}
value = 1
\end{verbatim}
