crates/carta/tests/snapshots/golden_e2e__ipynb__latex__code-error.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
\protect\phantomsection\label{boom}
\begin{verbatim}
raise Error
\end{verbatim}

\begin{verbatim}
Traceback
Err: bad
\end{verbatim}
