crates/carta/tests/snapshots/golden_e2e__ipynb__latex__code-image.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
\protect\phantomsection\label{plot}
\begin{verbatim}
draw()
\end{verbatim}

\pandocbounded{\includegraphics[keepaspectratio]{ddd8a63b8957c29356d1015e6040f47158d26c1d.png}}
