crates/carta/tests/snapshots/golden_e2e__ipynb__latex__code-result.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
\protect\phantomsection\label{result}
\begin{verbatim}
2 + 2
\end{verbatim}

\begin{verbatim}
4
\end{verbatim}

\begin{verbatim}
{"v":4}
\end{verbatim}
