crates/carta/tests/snapshots/golden_e2e__ipynb__latex__definition-marker-fold.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
\protect\phantomsection\label{deffold}
A line of prose

: not a definition list in this dialect
